update: fixed ui mistakes and modify email service in backend.